[package]
name = "speed-test"
version = "0.1.0"
authors = ["Ryan Kennedy <rkennedy906@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.4"
indicatif    = "0.14.0"
lazy_static  = "1.4.0"
parking_lot  = "0.10.0"
reqwest      = { version = "0.10.1",  features = ["json", "stream"] }
serde        = { version = "1.0.104", features = ["derive"] }
tokio        = { version = "0.2.11",  features = ["full"] }